Add --add-opens java.base/java.lang.invoke=ALL-UNNAMED for Java 17