@@ -173,6 +173,7 @@ subprojects {
     from javadoc
   }
 
+  def javaVersionNoShadow = javaVersion // Test task also has javaVersion
   tasks.withType(Test) {
     useJUnitPlatform()
     def taskName = name
@@ -187,6 +188,11 @@ subprojects {
     //Required for building on Travis' container-based infrastructure to not be killed with
     //'exit code 137' - https://github.com/travis-ci/travis-ci/issues/5582
     jvmArgs '-Xmx512m'
+
+    if (javaVersionNoShadow >= 17) {
+      // Workaround for Java 17 to enable mocking of default methods
+      jvmArgs("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED")
+    }
   }
 
   jacoco {
